--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kxmlgui (4.96.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream alpha release
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Tue, 11 Feb 2014 18:39:39 +0100
+
 kxmlgui (4.95.0-0ubuntu1) trusty; urgency=low
 
   * Initial release
