--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kxmlgui (4.96.0-0ubuntu1) UNRELEASED; urgency=medium
+kxmlgui (4.96.0-0ubuntu1) trusty; urgency=medium
 
   [ Rohan Garg ]
   * New upstream alpha release
