--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kxmlgui (4.97.0-0ubuntu1) UNRELEASED; urgency=medium
+kxmlgui (4.97.0-0ubuntu1) trusty; urgency=medium
 
   * New upstream alpha release
   * Rename library package for soname 5
