--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kxmlgui (4.98.0-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream beta release
+  * Update build-depends
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Sat, 29 Mar 2014 11:03:52 +0000
 
