--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kxmlgui (4.98.0-0ubuntu1) UNRELEASED; urgency=medium
+kxmlgui (4.98.0-0ubuntu1) trusty; urgency=medium
 
   * New upstream beta release
   * Update build-depends
