--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
 kxmlgui (4.99.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Jonathan Riddell ]
   * New upstream beta release
+
+  [ Scarlett Clark ]
+  * Fixed install path and missing file.
+  * Patched symbols 
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 05 May 2014 15:39:56 +0100
 
