--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,3 @@
-kxmlgui (4.99.0-0ubuntu2) UNRELEASED; urgency=medium
-
-  * Re-add -dev package after a faulty wrap-and-sort.
-
- -- José Manuel Santamaría Lema <panfaust@gmail.com>  Mon, 02 Jun 2014 04:37:58 +0200
-
 kxmlgui (4.99.0-0ubuntu1) trusty; urgency=medium
 
   [ Jonathan Riddell ]
@@ -11,7 +5,10 @@ kxmlgui (4.99.0-0ubuntu1) trusty; urgency=medium
 
   [ Scarlett Clark ]
   * Fixed install path and missing file.
-  * Patched symbols 
+  * Patched symbols
+
+  [ José Manuel Santamaría Lema ]
+  * Re-add -dev package after a faulty wrap-and-sort.
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 05 May 2014 15:39:56 +0100
 
