--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kxmlgui (4.100.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream beta release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 02 Jun 2014 13:45:57 +0100
+
 kxmlgui (4.99.0-0ubuntu1) trusty; urgency=medium
 
   [ Jonathan Riddell ]
