--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ kxmlgui (4.100.0-0ubuntu1) UNRELEASED; urgency=medium
   * Update symbols
   * Remove useless Pre-Depends fields used for multiarch compat in
     releases older than trusty
+  * Remove incorrect Section fields
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 02 Jun 2014 13:45:57 +0100
 
