--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 kxmlgui (5.0.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Jonathan Riddell ]
   * Initial stable upstream release
+
+  [ Scarlett Clark ]
+  * Fix install file 
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 02 Jul 2014 00:43:29 +0200
 
