--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-kxmlgui (5.0.0-0ubuntu1) UNRELEASED; urgency=medium
+kxmlgui (5.0.0-0ubuntu1) utopic; urgency=medium
 
   * Initial stable upstream release
 
- -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Fri, 17 Jan 2014 16:58:49 +0000
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Wed, 16 Jul 2014 13:40:12 +0200
