--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kxmlgui (5.0.0-0ubuntu2) UNRELEASED; urgency=medium
+
+  * Update copyright to match licensing to source, + Plus fix missing license. 
+
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Wed, 16 Jul 2014 08:32:13 -0700
+
 kxmlgui (5.0.0-0ubuntu1) utopic; urgency=medium
 
   * Initial stable upstream release
