--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,10 @@ kxmlgui (5.0.0-0ubuntu2) UNRELEASED; urgency=medium
   [ Rohan Garg ]
   * Add XS-Testsuite to debian/control
 
+  [ José Manuel Santamaría Lema ]
+  * Update libraries *.install paths so a soname bump doesn't go
+    unnoticed.
+
  -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Wed, 16 Jul 2014 08:32:13 -0700
 
 kxmlgui (5.0.0-0ubuntu1) utopic; urgency=medium
