--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kxmlgui (5.1.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Sun, 03 Aug 2014 19:04:35 -0700
+
 kxmlgui (5.0.0-0ubuntu1) utopic; urgency=medium
 
   * Initial stable upstream release
