--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kxmlgui (5.1.0-0ubuntu1) UNRELEASED; urgency=medium
+kxmlgui (5.1.0-0ubuntu1) utopic; urgency=medium
 
   * New upstream release
 
- -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Sun, 03 Aug 2014 19:04:35 -0700
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Tue, 05 Aug 2014 17:16:26 +0200
 
 kxmlgui (5.0.0-0ubuntu1) utopic; urgency=medium
 
