--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kxmlgui (5.2.0-0ubuntu1) UNRELEASED; urgency=medium
+kxmlgui (5.2.0-0ubuntu1) utopic; urgency=medium
 
   * New upstream release
   * Use pkg-kde-tools version 3 scripts
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 11 Sep 2014 20:51:01 +0000
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 22 Sep 2014 19:47:27 +0200
 
 kxmlgui (5.1.0-0ubuntu1) utopic; urgency=medium
 
