--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kxmlgui (5.3.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 06 Oct 2014 11:38:57 +0100
+
 kxmlgui (5.2.0-0ubuntu1) utopic; urgency=medium
 
   * New upstream release
