--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kxmlgui (5.3.0-0ubuntu2) UNRELEASED; urgency=medium
+
+  * Update symbols for i386,amd64
+
+ -- Harald Sitter <apachelogger@kubuntu.org>  Thu, 16 Oct 2014 07:48:35 +0200
+
 kxmlgui (5.3.0-0ubuntu1) utopic; urgency=medium
 
   * New upstream release
