--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
-kxmlgui (5.3.0-0ubuntu2) UNRELEASED; urgency=medium
+kxmlgui (5.4.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Harald Sitter ]
   * Update symbols for i386,amd64
   * Remove all build dependencies that are not actually mentioned in
     the CMakeLists.txt (i.e. unnecessary ones)
 
- -- Harald Sitter <apachelogger@kubuntu.org>  Thu, 16 Oct 2014 07:48:35 +0200
+  [ Jonathan Riddell ]
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 03 Nov 2014 18:39:56 +0100
 
 kxmlgui (5.3.0-0ubuntu1) utopic; urgency=medium
 
