--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kxmlgui (5.4.0-0ubuntu1) UNRELEASED; urgency=medium
+kxmlgui (5.4.0-0ubuntu1) vivid; urgency=medium
 
   [ Harald Sitter ]
   * Update symbols for i386,amd64
@@ -8,7 +8,7 @@ kxmlgui (5.4.0-0ubuntu1) UNRELEASED; urgency=medium
   [ Jonathan Riddell ]
   * New upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 03 Nov 2014 18:39:56 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 07 Nov 2014 15:13:30 +0100
 
 kxmlgui (5.3.0-0ubuntu1) utopic; urgency=medium
 
