--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kxmlgui (5.5.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 11 Dec 2014 14:15:51 -0800
+
 kxmlgui (5.4.0-0ubuntu1) vivid; urgency=medium
 
   [ Harald Sitter ]
