--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kxmlgui (5.6.0-0ubuntu1) UNRELEASED; urgency=medium
+kxmlgui (5.6.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 05 Jan 2015 14:10:53 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 06 Jan 2015 19:54:24 +0100
 
 kxmlgui (5.5.0-0ubuntu1) vivid; urgency=medium
 
