--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 kxmlgui (5.6.0-1~) UNRELEASED; urgency=medium
 
   * Prepare initial Debian release.
+  * Update build dependencies to build against experimental and to
+    follow cmake.
 
  -- Maximiliano Curia <maxy@debian.org>  Tue, 27 Jan 2015 14:29:54 +0100
 
