--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ kxmlgui (5.6.0-1~) UNRELEASED; urgency=medium
   * Update build dependencies to build against experimental and to
     follow cmake.
   * Bump Standards-Version to 3.9.6, no changes needed.
+  * Update copyright information.
 
  -- Maximiliano Curia <maxy@debian.org>  Tue, 27 Jan 2015 14:29:54 +0100
 
