--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ kxmlgui (5.6.0-1~) UNRELEASED; urgency=medium
   * Bump Standards-Version to 3.9.6, no changes needed.
   * Update copyright information.
   * Update install files.
+  * Add acc autopkgtests.
 
  -- Maximiliano Curia <maxy@debian.org>  Tue, 27 Jan 2015 14:29:54 +0100
 
