--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ kxmlgui (5.6.0-1~) UNRELEASED; urgency=medium
   * Update copyright information.
   * Update install files.
   * Add acc autopkgtests.
+  * Update watch file.
 
  -- Maximiliano Curia <maxy@debian.org>  Tue, 27 Jan 2015 14:29:54 +0100
 
