--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kxmlgui (5.7.0-0ubuntu1) UNRELEASED; urgency=medium
+kxmlgui (5.7.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Harald Sitter <sitter@kde.org>  Mon, 09 Feb 2015 10:05:28 +0100
+ -- Harald Sitter <sitter@kde.org>  Tue, 10 Feb 2015 16:30:58 +0100
 
 kxmlgui (5.6.0-0ubuntu1) vivid; urgency=medium
 
