--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kxmlgui (5.7.0-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (5.7.0).
+
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 24 Feb 2015 17:36:55 +0100
+
 kxmlgui (5.6.0-1) experimental; urgency=medium
 
   * Prepare initial Debian release.
