--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kxmlgui (5.8.0-1~) UNRELEASED; urgency=medium
+kxmlgui (5.8.0-1) experimental; urgency=medium
 
   * New upstream release (5.8.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Sat, 14 Mar 2015 10:23:04 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Sun, 22 Mar 2015 11:38:35 +0100
 
 kxmlgui (5.7.0-1) experimental; urgency=medium
 
