--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kxmlgui (5.8.0-1) experimental; urgency=medium
 
   * New upstream release (5.8.0).
+  * Update copyright information.
 
  -- Maximiliano Curia <maxy@debian.org>  Sun, 22 Mar 2015 11:38:35 +0100
 
