--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kxmlgui (5.9.0-0ubuntu1) UNRELEASED; urgency=medium
+kxmlgui (5.9.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 10 Apr 2015 11:09:04 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 13 Apr 2015 23:19:41 +0200
 
 kxmlgui (5.8.0-0ubuntu1) vivid; urgency=medium
 
