New upstream release (5.11.0).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-kxmlgui (5.10.0-1~) UNRELEASED; urgency=medium
+kxmlgui (5.11.0-1~) UNRELEASED; urgency=medium
 
   * New upstream release (5.10.0).
   * Update symbols files from buildds logs (5.9.0-1).
+  * New upstream release (5.11.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 11 May 2015 12:19:00 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Sun, 28 Jun 2015 15:04:18 +0200
 
 kxmlgui (5.9.0-1) experimental; urgency=medium
 
