--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kxmlgui (5.12.0-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (5.12.0).
+
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 07 Jul 2015 17:36:40 +0200
+
 kxmlgui (5.11.0-1) unstable; urgency=medium
 
   * New upstream release (5.10.0).
