--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kxmlgui (5.12.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 10 Jul 2015 08:28:30 -0700
+
 kxmlgui (5.10.0-0ubuntu1) wily; urgency=medium
 
   [ Maximiliano Curia ]
