--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ kxmlgui (5.12.0-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release
   * Fix merge.
+  * Vivid backport. 
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 10 Jul 2015 08:28:30 -0700
 
