--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kxmlgui (5.13.0-0ubuntu1) UNRELEASED; urgency=medium
+kxmlgui (5.13.0-0ubuntu1) wily; urgency=medium
 
   * new upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 07 Aug 2015 16:15:38 +0200
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 10 Aug 2015 13:34:36 +0200
 
 kxmlgui (5.12.0-0ubuntu1) wily; urgency=medium
 
