--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kxmlgui (5.13.0-1~) UNRELEASED; urgency=medium
+kxmlgui (5.13.0-1) unstable; urgency=medium
 
   * New upstream release (5.13.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 31 Aug 2015 11:28:11 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 31 Aug 2015 12:12:27 +0200
 
 kxmlgui (5.12.0-1) unstable; urgency=medium
 
