--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kxmlgui (5.14.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * new upstream release
+
+ -- Clive Johnston <clivejo@aol.com>  Mon, 14 Sep 2015 20:06:25 +0100
+
 kxmlgui (5.13.0-0ubuntu1) wily; urgency=medium
 
   * new upstream release
