--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kxmlgui (5.14.0-0ubuntu1) UNRELEASED; urgency=medium
+kxmlgui (5.14.0-0ubuntu1) wily; urgency=medium
 
   * new upstream release
 
- -- Clive Johnston <clivejo@aol.com>  Mon, 14 Sep 2015 20:06:25 +0100
+ -- Clive Johnston <clivejo@aol.com>  Thu, 17 Sep 2015 13:28:24 +0100
 
 kxmlgui (5.13.0-0ubuntu1) wily; urgency=medium
 
