--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kxmlgui (5.14.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * Vivid backport
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Tue, 29 Sep 2015 17:11:54 -0700
+
 kxmlgui (5.14.0-0ubuntu1) wily; urgency=medium
 
   * new upstream release
