--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-kxmlgui (5.14.0-0ubuntu1) UNRELEASED; urgency=medium
+kxmlgui (5.15.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Scarlett Clark ]
   * Vivid backport
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Tue, 29 Sep 2015 17:11:54 -0700
+  [ Jonathan Riddell ]
+  * new upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 05 Oct 2015 21:03:46 +0100
 
 kxmlgui (5.14.0-0ubuntu1) wily; urgency=medium
 
