--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ kxmlgui (5.15.0-1~) UNRELEASED; urgency=medium
 
   * New upstream release (5.15.0).
   * Update symbols files from buildds logs (5.14.0-1).
+  * Update symbols files.
 
  -- Maximiliano Curia <maxy@debian.org>  Mon, 05 Oct 2015 15:05:52 +0200
 
