--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kxmlgui (5.15.0-0ubuntu1) UNRELEASED; urgency=medium
+kxmlgui (5.15.0-0ubuntu1) wily; urgency=medium
 
   [ Scarlett Clark ]
   * Vivid backport
@@ -6,7 +6,7 @@ kxmlgui (5.15.0-0ubuntu1) UNRELEASED; urgency=medium
   [ Jonathan Riddell ]
   * new upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 05 Oct 2015 21:03:46 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 07 Oct 2015 13:58:35 +0100
 
 kxmlgui (5.14.0-0ubuntu1) wily; urgency=medium
 
