--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kxmlgui (5.15.0-0ubuntu2) UNRELEASED; urgency=medium
+
+  * Vivid backport. 
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 09 Oct 2015 00:53:38 -0700
+
 kxmlgui (5.15.0-0ubuntu1) wily; urgency=medium
 
   [ Scarlett Clark ]
