--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kxmlgui (5.16.0-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (5.16.0).
+
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 17 Nov 2015 11:45:36 +0100
+
 kxmlgui (5.15.0-1) unstable; urgency=medium
 
   * New upstream release (5.15.0).
