--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-kxmlgui (5.16.0-1~) UNRELEASED; urgency=medium
+kxmlgui (5.16.0-1) unstable; urgency=medium
 
   * New upstream release (5.16.0).
   * Update symbols files from buildds logs (5.15.0-1).
   * Update install files.
   * Update symbols files.
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 17 Nov 2015 11:45:36 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 30 Nov 2015 12:12:25 +0100
 
 kxmlgui (5.15.0-1) unstable; urgency=medium
 
