--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ kxmlgui (5.17.0-1~) UNRELEASED; urgency=medium
 
   * New upstream release (5.17.0).
   * Update symbols files from buildds logs (5.16.0-1).
+  * Update symbols files.
 
  -- Maximiliano Curia <maxy@debian.org>  Mon, 07 Dec 2015 14:18:14 +0100
 
