--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-kxmlgui (5.16.0-1ubuntu1) UNRELEASED; urgency=medium
+kxmlgui (5.17.0-0ubuntu1) UNRELEASED; urgency=medium
 
   * Debian merge. No remaining changes. 
+  * New upstream release Xenial
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 02 Dec 2015 14:05:35 -0800
+ -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 14 Dec 2015 02:36:34 +0000
 
 kxmlgui (5.16.0-1) unstable; urgency=medium
 
