--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-kxmlgui (5.18.0-1~) UNRELEASED; urgency=medium
+kxmlgui (5.18.0-1) experimental; urgency=medium
 
   * New upstream release (5.17.0).
   * Update symbols files from buildds logs (5.16.0-1).
   * Update symbols files.
   * New upstream release (5.18.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 19 Jan 2016 20:59:16 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 27 Jan 2016 13:33:55 +0100
 
 kxmlgui (5.16.0-1) unstable; urgency=medium
 
