--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kxmlgui (5.19.0-1~) UNRELEASED; urgency=medium
+kxmlgui (5.19.0-1) experimental; urgency=medium
 
   * New upstream release (5.19.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Sat, 06 Feb 2016 19:01:30 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 13 Feb 2016 15:16:12 +0100
 
 kxmlgui (5.18.0-1) experimental; urgency=medium
 
