--- a/debian/changelog
+++ b/debian/changelog
@@ -1,17 +1,13 @@
-kxmlgui (5.23.0-1~2.gbpc230eb) UNRELEASED; urgency=medium
-
-  ** SNAPSHOT build @c230eb80ed82f0d551c712f2a3e5bc64155fd567 **
+kxmlgui (5.23.0-1) unstable; urgency=medium
 
   [ Automatic packaging ]
-  ** SNAPSHOT build @466e34f2b6bdf50765e821fd8ea34489099b9839 **
-
   * Update build-deps and deps with the info from cmake
   * Update symbols files with the buildds results
 
   [ Maximiliano Curia ]
   * Update acc.in file
 
- -- Maximiliano Curia <maxy@gnuservers.com.ar>  Tue, 21 Jun 2016 11:03:17 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 21 Jun 2016 12:04:18 +0200
 
 kxmlgui (5.22.0-1) unstable; urgency=medium
 
