--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
-kxmlgui (5.27.0-1~1.gbp3c7d13) UNRELEASED; urgency=medium
+kxmlgui (5.27.0-1) unstable; urgency=medium
 
-  ** SNAPSHOT build @3c7d1367d74fb479f6bf7af60699808972d00400 **
-
+  [ Automatic packaging ]
   * Update build-deps and deps with the info from cmake
 
- -- Automatic packaging <maxy+jenkins@gnuservers.com.ar>  Sat, 08 Oct 2016 12:57:54 +0200
+  [ Maximiliano Curia ]
+  * New upstream release (5.27)
+  * Bump group breaks (5.27)
+
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 15 Oct 2016 17:05:08 +0200
 
 kxmlgui (5.26.0-1) unstable; urgency=medium
 
