Update changelog for 5.36.0-1~ release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kxmlgui (5.35.0-1~1) UNRELEASED; urgency=medium
+kxmlgui (5.36.0-1~) UNRELEASED; urgency=medium
 
   [ Maximiliano Curia ]
   * New upstream release (5.35.0).
@@ -8,12 +8,15 @@ kxmlgui (5.35.0-1~1) UNRELEASED; urgency=medium
   * Update build-deps and deps with the info from cmake
   * Bump group breaks (5.35)
   * Update symbols files.
+  * Let autopkgtest take care of the build required for the test
+  * watch: Use https uris
+  * New upstream release (5.36.0).
 
   [ Raymond Wooninck ]
   * Add signing key
   * also include signing-key
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 07 Jul 2017 12:27:12 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 08 Jul 2017 13:44:36 +0200
 
 kxmlgui (5.28.0-1) unstable; urgency=medium
 
