--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kxmlgui (5.36.0-1~) UNRELEASED; urgency=medium
+kxmlgui (5.36.0-1) experimental; urgency=medium
 
   [ Maximiliano Curia ]
   * New upstream release (5.35.0).
@@ -11,12 +11,14 @@ kxmlgui (5.36.0-1~) UNRELEASED; urgency=medium
   * Let autopkgtest take care of the build required for the test
   * watch: Use https uris
   * New upstream release (5.36.0).
+  * Bump group breaks (5.36)
+  * Update build-deps and deps with the info from cmake
 
   [ Raymond Wooninck ]
   * Add signing key
   * also include signing-key
 
- -- Maximiliano Curia <maxy@debian.org>  Sat, 08 Jul 2017 13:44:36 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Sun, 09 Jul 2017 23:42:17 +0200
 
 kxmlgui (5.28.0-1) unstable; urgency=medium
 
