--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kxmlgui (5.37.0-2~) UNRELEASED; urgency=medium
+
+  * New revision
+
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 23 Aug 2017 22:00:38 +0200
+
 kxmlgui (5.37.0-1) experimental; urgency=medium
 
   * New upstream release (5.37.0).
