--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kxmlgui (5.38.0-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (5.38.0).
+
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 18 Sep 2017 16:56:49 +0200
+
 kxmlgui (5.37.0-2) sid; urgency=medium
 
   * New revision
