--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kxmlgui (5.41.0-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (5.41.0).
+
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 13 Dec 2017 15:08:59 -0300
+
 kxmlgui (5.41.0-0neon) xenial; urgency=medium
 
   * New release
@@ -15,12 +21,6 @@ kxmlgui (5.39.0-0neon) xenial; urgency=medium
   * New release
 
  -- Neon CI <neon@kde.org>  Sun, 15 Oct 2017 11:47:43 +0000
-
-kxmlgui (5.38.0-1~) UNRELEASED; urgency=medium
-
-  * New upstream release (5.38.0).
-
- -- Maximiliano Curia <maxy@debian.org>  Mon, 18 Sep 2017 16:56:49 +0200
 
 kxmlgui (5.38.0-0neon) xenial; urgency=medium
 
