--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
-kxmlgui (5.41.0-1~) UNRELEASED; urgency=medium
+kxmlgui (5.41.0-1) experimental; urgency=medium
 
   * New upstream release (5.41.0).
+  * Bump Standards-Version to 4.1.2.
+  * Update build-deps and deps with the info from cmake
+  * Update symbols files
+  * Bump group breaks (5.41)
+  * Release to experimental
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 13 Dec 2017 15:08:59 -0300
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 15 Dec 2017 10:43:16 -0300
 
 kxmlgui (5.41.0-0neon) xenial; urgency=medium
 
