--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
-kxmlgui (5.42.0-1~) UNRELEASED; urgency=medium
+kxmlgui (5.42.0-1) experimental; urgency=medium
 
   * New upstream release (5.42.0).
+  * Add link options as-needed
+  * Bump debhelper build-dep and compat to 11.
+  * Build without build_stamp
+  * Update build-deps and deps with the info from cmake
+  * Bump group breaks (5.42)
+  * Bump Standards-Version to 4.1.3.
+  * Release to experimental
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 22 Jan 2018 16:42:17 -0300
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 02 Feb 2018 12:06:04 +0100
 
 kxmlgui (5.41.0-1) experimental; urgency=medium
 
